working build with aligned data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,17 +23,17 @@ file(GLOB_RECURSE USB_APP_CSOURCES USB_DEVICE/App/*.c)
 set(SOURCE_FILES ${USER_CSOURCES} ${USER_CXXSOURCES} ${HAL_SOURCES} ${USB_TARGET_CSOURCES} ${USB_APP_CSOURCES} ${USB_CDC_SOURCES} ${USB_CORE_SOURCES} startup_stm32f401xc.s STM32F401CCUx_FLASH.ld)
 add_executable(firmware.elf ${SOURCE_FILES})
 
-# set(LIBRARIES	libs)
-# add_subdirectory (${LIBRARIES}/OperationArchitecture)
-# add_subdirectory (${LIBRARIES}/EmbeddedIOServices)
-# add_subdirectory (${LIBRARIES}/EmbeddedIOOperations)
-# add_subdirectory (${LIBRARIES}/ReluctorOperations)
-# add_subdirectory (${LIBRARIES}/EFIGenie)
-# target_link_libraries(firmware.elf OperationArchitecture)
-# target_link_libraries(firmware.elf EmbeddedIOServices)
-# target_link_libraries(firmware.elf EmbeddedIOOperations)
-# target_link_libraries(firmware.elf ReluctorOperations)
-# target_link_libraries(firmware.elf EFIGenie)
+set(LIBRARIES	libs)
+add_subdirectory (${LIBRARIES}/OperationArchitecture)
+add_subdirectory (${LIBRARIES}/EmbeddedIOServices)
+add_subdirectory (${LIBRARIES}/EmbeddedIOOperations)
+add_subdirectory (${LIBRARIES}/ReluctorOperations)
+add_subdirectory (${LIBRARIES}/EFIGenie)
+target_link_libraries(firmware.elf OperationArchitecture)
+target_link_libraries(firmware.elf EmbeddedIOServices)
+target_link_libraries(firmware.elf EmbeddedIOOperations)
+target_link_libraries(firmware.elf ReluctorOperations)
+target_link_libraries(firmware.elf EFIGenie)
 
 set(HEX_FILE ${PROJECT_SOURCE_DIR}/build/firmware.hex)
 set(BIN_FILE ${PROJECT_SOURCE_DIR}/build/firmware.bin)
