point to abstraction instead of copying

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,28 +2,31 @@ cmake_minimum_required ( VERSION 3.9 )
 set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
 project ( EFIGenie C CXX ASM )
 
+set(LIBRARIES	libs)
+
+include_directories(Core/Inc)
 include_directories(Drivers/CMSIS/Device/ST/STM32F4xx/Include)
 include_directories(Drivers/CMSIS/Include)
 include_directories(Drivers/STM32F4xx_HAL_Driver/Inc)
 include_directories(Drivers/STM32F4xx_HAL_Driver/Inc/Legacy)
 include_directories(Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc)
 include_directories(Middlewares/ST/STM32_USB_Device_Library/Core/Inc)
-include_directories(Core/Inc)
 include_directories(USB_DEVICE/App)
 include_directories(USB_DEVICE/Target)
+include_directories(${LIBRARIES}/EmbeddedIOServices/HardwareAbstractions/Stm32Hal/include)
 
 file(GLOB_RECURSE USER_CSOURCES Core/Src/*.c)
 file(GLOB_RECURSE USER_CXXSOURCES Core/Src/*.cpp)
+file(GLOB_RECURSE HAL_SOURCES Drivers/STM32F4xx_HAL_Driver/Src/*.c)
 file(GLOB_RECURSE USB_CDC_SOURCES Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/*.c)
 file(GLOB_RECURSE USB_CORE_SOURCES Middlewares/ST/STM32_USB_Device_Library/Core/Src/*.c)
-file(GLOB_RECURSE HAL_SOURCES Drivers/STM32F4xx_HAL_Driver/Src/*.c)
 file(GLOB_RECURSE USB_TARGET_CSOURCES USB_DEVICE/Target/*.c)
 file(GLOB_RECURSE USB_APP_CSOURCES USB_DEVICE/App/*.c)
+file(GLOB_RECURSE EmbeddedIOService_SOURCES ${LIBRARIES}/EmbeddedIOServices/HardwareAbstractions/Stm32Hal/src/*.cpp)
 
-set(SOURCE_FILES ${USER_CSOURCES} ${USER_CXXSOURCES} ${HAL_SOURCES} ${USB_TARGET_CSOURCES} ${USB_APP_CSOURCES} ${USB_CDC_SOURCES} ${USB_CORE_SOURCES} startup_stm32f401xc.s STM32F401CCUx_FLASH.ld)
+set(SOURCE_FILES ${USER_CSOURCES} ${USER_CXXSOURCES} ${HAL_SOURCES} ${USB_CDC_SOURCES} ${USB_CORE_SOURCES} ${USB_TARGET_CSOURCES} ${USB_APP_CSOURCES} ${EmbeddedIOService_SOURCES} startup_stm32f401xc.s STM32F401CCUx_FLASH.ld)
 add_executable(firmware.elf ${SOURCE_FILES})
 
-set(LIBRARIES	libs)
 add_subdirectory (${LIBRARIES}/OperationArchitecture)
 add_subdirectory (${LIBRARIES}/EmbeddedIOServices)
 add_subdirectory (${LIBRARIES}/EmbeddedIOOperations)
