--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,17 +27,17 @@ IF(USER_CXXSOURCES_Templates)
 ENDIF()
 file(GLOB_RECURSE HAL_SOURCES Drivers/STM32F4xx_HAL_Driver/Src/*.c)
 file(GLOB_RECURSE HAL_SOURCES_Templates Drivers/STM32F4xx_HAL_Driver/Src/*_template.c)
-IF(HAL_SOURCES)
+IF(HAL_SOURCES_Templates)
         list(REMOVE_ITEM HAL_SOURCES ${HAL_SOURCES_Templates})
 ENDIF()
 file(GLOB_RECURSE USB_CDC_SOURCES Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/*.c)
 file(GLOB_RECURSE USB_CDC_SOURCES_Templates Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/*_template.c)
-IF(USB_CDC_SOURCES)
+IF(USB_CDC_SOURCES_Templates)
         list(REMOVE_ITEM USB_CDC_SOURCES ${USB_CDC_SOURCES_Templates})
 ENDIF()
 file(GLOB_RECURSE USB_CORE_SOURCES Middlewares/ST/STM32_USB_Device_Library/Core/Src/*.c)
 file(GLOB_RECURSE USB_CORE_SOURCES_Templates Middlewares/ST/STM32_USB_Device_Library/Core/Src/*_template.c)
-IF(USB_CORE_SOURCES)
+IF(USB_CORE_SOURCES_Templates)
         list(REMOVE_ITEM USB_CORE_SOURCES ${USB_CORE_SOURCES_Templates})
 ENDIF()
 file(GLOB_RECURSE USB_TARGET_CSOURCES USB_DEVICE/Target/*.c)
