EFIGenie Only Lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ include_directories(Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc)
 include_directories(Middlewares/ST/STM32_USB_Device_Library/Core/Inc)
 include_directories(USB_DEVICE/App)
 include_directories(USB_DEVICE/Target)
-include_directories(${LIBRARIES}/EmbeddedIOServices/HardwareAbstractions/Stm32Hal/include)
+include_directories(${LIBRARIES}/EFIGenie/libs/EmbeddedIOServices/HardwareAbstractions/Stm32Hal/include)
 
 file(GLOB_RECURSE USER_CSOURCES Core/Src/*.c)
 file(GLOB_RECURSE USER_CSOURCES_Templates Core/Src/*_template.c)
@@ -50,8 +50,8 @@ file(GLOB_RECURSE USB_APP_CSOURCES_Templates USB_DEVICE/App/*_template.c)
 IF(USB_APP_CSOURCES_Templates)
         list(REMOVE_ITEM USB_APP_CSOURCES ${USB_APP_CSOURCES_Templates})
 ENDIF()
-file(GLOB_RECURSE EmbeddedIOService_SOURCES ${LIBRARIES}/EmbeddedIOServices/HardwareAbstractions/Stm32Hal/src/*.cpp)
-file(GLOB_RECURSE EmbeddedIOService_SOURCES_Templates ${LIBRARIES}/EmbeddedIOServices/HardwareAbstractions/Stm32Hal/src/*_template.cpp)
+file(GLOB_RECURSE EmbeddedIOService_SOURCES ${LIBRARIES}/EFIGenie/libs/EmbeddedIOServices/HardwareAbstractions/Stm32Hal/src/*.cpp)
+file(GLOB_RECURSE EmbeddedIOService_SOURCES_Templates ${LIBRARIES}/EFIGenie/libs/EmbeddedIOServices/HardwareAbstractions/Stm32Hal/src/*_template.cpp)
 IF(EmbeddedIOService_SOURCES_Templates)
         list(REMOVE_ITEM EmbeddedIOService_SOURCES ${EmbeddedIOService_SOURCES_Templates})
 ENDIF()
@@ -59,15 +59,15 @@ ENDIF()
 set(SOURCE_FILES ${USER_CSOURCES} ${USER_CXXSOURCES} ${HAL_SOURCES} ${USB_CDC_SOURCES} ${USB_CORE_SOURCES} ${USB_TARGET_CSOURCES} ${USB_APP_CSOURCES} ${EmbeddedIOService_SOURCES} startup_stm32f401xc.s STM32F401CCUx_FLASH.ld)
 add_executable(firmware.elf ${SOURCE_FILES})
 
-add_subdirectory (${LIBRARIES}/OperationArchitecture)
-add_subdirectory (${LIBRARIES}/EmbeddedIOServices)
-add_subdirectory (${LIBRARIES}/EmbeddedIOOperations)
-add_subdirectory (${LIBRARIES}/ReluctorOperations)
+# add_subdirectory (${LIBRARIES}/OperationArchitecture)
+# add_subdirectory (${LIBRARIES}/EmbeddedIOServices)
+# add_subdirectory (${LIBRARIES}/EmbeddedIOOperations)
+# add_subdirectory (${LIBRARIES}/ReluctorOperations)
 add_subdirectory (${LIBRARIES}/EFIGenie)
-target_link_libraries(firmware.elf OperationArchitecture)
-target_link_libraries(firmware.elf EmbeddedIOServices)
-target_link_libraries(firmware.elf EmbeddedIOOperations)
-target_link_libraries(firmware.elf ReluctorOperations)
+# target_link_libraries(firmware.elf OperationArchitecture)
+# target_link_libraries(firmware.elf EmbeddedIOServices)
+# target_link_libraries(firmware.elf EmbeddedIOOperations)
+# target_link_libraries(firmware.elf ReluctorOperations)
 target_link_libraries(firmware.elf EFIGenie)
 
 set(HEX_FILE ${PROJECT_SOURCE_DIR}/build/firmware.hex)
