--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required ( VERSION 3.9 )
 set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
-project ( EFIGenie C CXX ASM )
+project ( EFIGenieSTM32F401C C CXX ASM )
 
 set(LIBRARIES	libs)
 
