--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "ms-vscode.cpptools",
     "twxs.cmake",
     "ms-vscode.cmake-tools",
-    "marus25.cortex-debug"
+    "marus25.cortex-debug",
+    "ritwickdey.LiveServer"
   ]
 }
